Version 1.0b To be released
===========================
- Added CWebServiceAction.serviceOptions (Qiang)
- Added CAPTCHA to application generated by yiic webapp (Qiang)
- Enabled CHtml::activeXXX to deal with multirow input (Qiang)
- Fixed issue #7: typo in CWebUser.id implementation (Qiang)
- Changed the default behavior of CWebServiceAction to serve WSDL (Qiang)

Version 1.0a October 5, 2008
=============================
Initial release